log/build_2025-08-30_17-57-37/py_pkg/stdout_stderr.log
running egg_info
writing ../../build/py_pkg/py_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/py_pkg/py_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/py_pkg/py_pkg.egg-info/entry_points.txt
writing requirements to ../../build/py_pkg/py_pkg.egg-info/requires.txt
writing top-level names to ../../build/py_pkg/py_pkg.egg-info/top_level.txt
reading manifest file '../../build/py_pkg/py_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/py_pkg/py_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying py_pkg/turle_control.py -> /home/lucas/turtlesim_ws/build/py_pkg/build/lib/py_pkg
running install
running install_lib
copying /home/lucas/turtlesim_ws/build/py_pkg/build/lib/py_pkg/turle_control.py -> /home/lucas/turtlesim_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg
byte-compiling /home/lucas/turtlesim_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg/turle_control.py to turle_control.cpython-310.pyc
running install_data
  File "/home/lucas/turtlesim_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg/turle_control.py", line 4
    from geometry_msgs/msg import Twist
                      ^
SyntaxError: invalid syntax

copying package.xml -> /home/lucas/turtlesim_ws/install/py_pkg/share/py_pkg
running install_egg_info
removing '/home/lucas/turtlesim_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/py_pkg/py_pkg.egg-info to /home/lucas/turtlesim_ws/install/py_pkg/lib/python3.10/site-packages/py_pkg-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/home/lucas/turtlesim_ws/build/py_pkg/install.log'
